[gd_scene load_steps=2 format=3 uid="uid://cwuhc7fibr0jj"]

[ext_resource type="Script" uid="uid://br2w6auiyrrdd" path="res://UI/water_level_debug.gd" id="1_nrkev"]

[node name="Water_Level_Debug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nrkev")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="WaterAmount" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WaterAmountLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/WaterAmount"]
layout_mode = 2
text = "Water Amount:"

[node name="WaterAmountNum" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/WaterAmount"]
layout_mode = 2
size_flags_horizontal = 10
text = "10000000000000"

[node name="WaterLevel" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WaterLevelLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/WaterLevel"]
layout_mode = 2
text = "Water Y Level:"

[node name="WaterLevelNum" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/WaterLevel"]
layout_mode = 2
size_flags_horizontal = 10
text = "-1"

[node name="WPS" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WPSLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/WPS"]
layout_mode = 2
text = "WPS Out:"

[node name="WPSNum" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/WPS"]
layout_mode = 2
size_flags_horizontal = 10
text = "-1"

[node name="Money" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Money"]
layout_mode = 2
text = "Money:"

[node name="MoneyNum" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Money"]
layout_mode = 2
size_flags_horizontal = 10
text = "xxx"
